# argos_ros2_simulation

./: configuration.argos
argos_patch/: DroneVelocityGlobalControl.patch
history/sonslib_backup/include/sonslib/: messager.h  sons.h
history/sonslib_backup/src/: connector.cpp  sons.cpp
src/argos3-bridge/: CMakeLists.txt  package.xml
src/argos3-bridge/argos3_plugin/: CMakeLists.txt  drone_ros2_bridge_controller.cpp  drone_ros2_bridge_controller.h
src/argos3-bridge/argos3_plugin/extensions/: my_loop_functions.cpp  my_loop_functions.h
src/argos3-bridge/argos3_plugin/extensions/debug/: debug_default_actuator.h
src/argos3-bridge/argos3_plugin/qtopengl_extensions/: my_qtopengl_user_functions.cpp  my_qtopengl_user_functions.h
src/argos3_bridge/: CMakeLists.txt  package.xml
src/argos3_bridge/argos3_plugin/: CMakeLists.txt  drone_ros2_bridge_controller.cpp
src/argos3_bridge/argos3_plugin/extensions/: my_loop_functions.cpp  my_loop_functions.h
src/argos3_bridge/msg/: Arrows.msg  Rings.msg  Tick.msg
src/drone/: CMakeLists.txt  package.xml
src/drone/history/: Waypoint.msg  droneFlightSystem.cpp
src/drone/launch/: drone_launch.xml  drone_launch_example.xml  drone_launch_template.xml
src/drone/msg/: Debug.msg  Message.msg
src/drone/scripts/: CommandNotes.sh  configuration.in.argos  configuration_example.in.argos  configuration_template.in.argos  run.py
src/drone/src/: debug.cpp  droneFlightSystem.cpp  droneSwarmSystem.cpp
src/mathlib/: CMakeLists.txt  package.xml
src/mathlib/include/mathlib/math/: quaternion.h  transform.h  vector3.h
src/mathlib/src/math/: vector3.cpp
src/sonslib/: CMakeLists.txt  package.xml
src/sonslib/include/sonslib/: assigner.h  connector.h  flocking.h  messager.h  module.h  scaleManager.h  sons.h  sonsDataStruct.h
src/sonslib/src/: assigner.cpp  connector.cpp  flocking.cpp  messager.cpp  scaleManager.cpp  sons.cpp
